// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favor info is ok. 1`] = `
<div>
  <div
    className="favour-header"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="favour-header-text"
      >
        Избранное
      </div>
      <div>
        <input
          className="input-field"
          id="search-input"
          placeholder="Добавить новый город"
          type="text"
        />
        <input
          className="btn"
          type="submit"
          value="Добавить новый город"
        />
      </div>
    </form>
  </div>
  <div
    className="favour-city-wrapper"
  >
    <div
      className="favour-grid-wrapper"
    >
      <div
        className="favour-weather"
      >
        <div
          className="favour-city-name"
        >
          Kiev
        </div>
        <div
          className="favour-city-temprature"
        >
          -9
          °C
        </div>
        <div>
          <img
            alt="weather"
            className="city-picture"
            crossOrigin="anonymous"
            src="http://openweathermap.org/img/wn/04n@2x.png"
          />
        </div>
        <div
          className="button-holder"
        >
          <button
            className="btn"
            onClick={[Function]}
          >
            Удалить
          </button>
        </div>
      </div>
      <p
        className="add-data-element"
      >
        Ветер:    
        <span>
          6
            м/с, 
          110
          °
        </span>
      </p>
      <p
        className="add-data-element"
      >
        Погода:   
        <span>
          Clouds
        </span>
      </p>
      <p
        className="add-data-element"
      >
        Влажность:  
        <span>
          61
           %
        </span>
      </p>
      <p
        className="add-data-element"
      >
        Давление:  
        <span>
          1037
           hpa
        </span>
      </p>
      <p
        className="add-data-element"
      >
        Координаты:  
        <span>
          [
          30.52
           , 
          50.43
          ]
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Major info is ok. 1`] = `
<div
  className="favour-grid-wrapper"
>
  <div
    className="favour-weather"
  >
    <div
      className="favour-city-name"
    >
      Orenburg
    </div>
    <div
      className="favour-city-temprature"
    >
      -18
      °C
    </div>
    <div>
      <img
        alt="weather"
        className="city-picture"
        crossOrigin="anonymous"
        src="http://openweathermap.org/img/wn/01n@2x.png"
      />
    </div>
    <div
      className="button-holder"
    >
      <button
        className="btn"
        onClick={[Function]}
      >
        Удалить
      </button>
    </div>
  </div>
  <p
    className="add-data-element"
  >
    Ветер:    
    <span>
      3
        м/с, 
      280
      °
    </span>
  </p>
  <p
    className="add-data-element"
  >
    Погода:   
    <span>
      Clear
    </span>
  </p>
  <p
    className="add-data-element"
  >
    Влажность:  
    <span>
      77
       %
    </span>
  </p>
  <p
    className="add-data-element"
  >
    Давление:  
    <span>
      1042
       hpa
    </span>
  </p>
  <p
    className="add-data-element"
  >
    Координаты:  
    <span>
      [
      55.1
       , 
      51.77
      ]
    </span>
  </p>
</div>
`;
